--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,51 @@
-version: '3'
+version: "3.7"
 services:
-  db:
-#     image: postgres
-#     volumes:
-#       - ./tmp/db:/var/lib/postgresql/data
-    image: mysql:5.7
-    restart: always
-    environment:
-        MYSQL_DATABASE: 'db'
-        MYSQL_USER: 'user'
-        MYSQL_PASSWORD: 'password'
-        MYSQL_ROOT_PASSWORD: 'password'
-    ports:
-        - '3306:3306'
-    expose:
-        - '3306'
-    volumes:
-        - ./mysql:/var/lib/mysql
-  web:
-    build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
-    volumes:
-      - .:/myapp
-    ports:
+ db:
+   image: "mysql:5.7"
+   environment:
+     MYSQL_ROOT_PASSWORD: root
+     MYSQL_USERNAME: root
+     MYSQL_PASSWORD: root
+   ports:
+      - "3306:3306"
+   expose:
+      - "3306"
+ redis:
+   image: "redis:4.0-alpine"
+   command: redis-server
+   volumes:
+      - "redis:/data"
+
+ website:
+   depends_on:
+      - "db"
+      - "redis"
+   build: .
+   ports:
       - "3000:3000"
-    depends_on:
-      - db
+   environment:
+     DB_USERNAME: root
+     DB_PASSWORD: root
+     DB_DATABASE: carwah_dev
+     DB_PORT: 3306
+     DB_HOST: db
+     RAILS_ENV: development
+     RAILS_MAX_THREADS: 5
+   volumes:
+      - ".:/app"
+      - "./docker/database.yml:/app/config/database.yml"
+   command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+ sidekiq:
+   depends_on:
+      - "db"
+      - "redis"
+   build: .
+   command: sidekiq -C config/sidekiq.yml
+   volumes:
+      - ".:/app"
+   environment:
+     REDIS_URL: redis://redis:6379/0
+
+volumes:
+ redis:
+ db:
