--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
    environment:
      DB_USERNAME: root
      DB_PASSWORD: root
-     DB_DATABASE: carwah_dev
+     DB_DATABASE: carwah_dev_development
      DB_PORT: 3306
      DB_HOST: db
      RAILS_ENV: development
@@ -34,17 +34,17 @@ services:
    volumes:
       - ".:/app"
       - "./docker/database.yml:/app/config/database.yml"
-   command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
- sidekiq:
-   depends_on:
-      - "db"
-      - "redis"
-   build: .
-   command: sidekiq -C config/sidekiq.yml
-   volumes:
-      - ".:/app"
-   environment:
-     REDIS_URL: redis://redis:6379/0
+   command: sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+#  sidekiq:
+#    depends_on:
+#       - "db"
+#       - "redis"
+#    build: .
+#    command: sidekiq -C config/sidekiq.yml
+#    volumes:
+#       - ".:/app"
+#    environment:
+#      REDIS_URL: redis://redis:6379/0
 
 volumes:
  redis:
